--- a/index.html
+++ b/index.html
@@ -81,9 +81,28 @@
                 <button>Call Now</button>
             </div>
         </section>
-    </main>
-    <footer>
         
+    </main>
+                             <!-- FOOTER AREA -->
+    <footer>
+        <div class="footer-text">
+            <h2>Future</h2>
+            <p>There are many variations of passages of Lorem Ipsum 
+                available, but the majority have suffered alteration in some 
+                form, by injected humour, or randomised words</p>
+            <p>Email : nazimuddin258@gmail.com</p>
+            <p>Phone : 01945287668</p>
+            <div class="footer-icon">
+                <img src="./images/icons/fb.png" alt="" srcset="">
+                <img src="./images/icons/twitter.png" alt="" srcset="">
+                <img src="./images/icons/youtube.png" alt="" srcset="">
+            </div>
+        </div>
+        <div class="subscribe">
+            <h3>Subscribe</h3>
+            <input type="text" placeholder="Enter your Email"><br>
+            <button>Subscribe</button>
+        </div>
     </footer>
 </body>
 </html>
