--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 <body>
     <header>
+        <div class="navigation ">
+            
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Cours</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </div>
         <div class="head-area">
             <h1>All Thinks Are Possible If You believe</h1>
             <p>There are many variations of passages of Lorem Ipsum 
@@ -81,7 +92,9 @@
                 <button>Call Now</button>
             </div>
         </section>
-        
+
+             <!-- Meet OUR TEAM MAMBER -->
+
     </main>
                              <!-- FOOTER AREA -->
     <footer>
